collector/external-dns/external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  labels:
    app: external-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.7.6
        args:
        - --source=ingress
        - --provider=coredns
        - --log-level=debug # debug only
---
apiVersion: v1
kind: Service
metadata:
  name: external-dns
  namespace: kube-system
  labels:
    app: external-dns-service
spec:
  ports:
    - port: 7979
      targetPort: 7979
      protocol: TCP
  selector:
    app: external-dns
